--- a/trial.Rmd
+++ b/trial.Rmd
@@ -19,7 +19,6 @@ library(rotl)
 
 lab10orders <- c("Thoracica","Decapoda","Isopoda","Cladocera","Neogastropoda","Unionoidea",
                  "Mytiloidea","Ostreoidea","Galliformes","Rodentia","Clupeiformes","Cypriniformes",
-                 "Perciformes","Forcipulatida","Scleractinia")
 
 # match names of string with OTOL names
 resolved_names <- tnrs_match_names(lab10orders)
@@ -27,6 +26,7 @@ resolved_names <- tnrs_match_names(lab10orders)
 # make tree
 response <- tol_induced_subtree(ott_ids=as.numeric(resolved_names$ott_id), parser="phytools")
 #nb if rgl package not installed correctly will not work
+#nb if rgl package not installed correctly will not work, update X11 to XQuartz all good!
 
 # simplify tip labels
 v=strsplit(response$tip.label,split="_",fixed=TRUE)
@@ -36,7 +36,6 @@ for(i in 1:length(response$tip.label)){
 
 # plot tree
 
-plot(response)
 ```
 
 ## @wareslab
